feat: add search word total count
